# torch-bp

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: all_bp.ipynb  loopy_bp.ipynb  robot_localization.ipynb  spider_svbp.ipynb  stein_vi.ipynb  tree_bp.ipynb
src/torch_bp/bp/: __init__.py  bp.py  discrete_bp.py  linear_gbp.py  particle_bp.py  svbp.py  tensor_bp.py
src/torch_bp/distributions/: __init__.py  distances.py  distributions.py
src/torch_bp/graph/: __init__.py  factor_graph.py  mrf_graph.py
src/torch_bp/graph/factors/: __init__.py  factors.py  linear_gaussian_factors.py
src/torch_bp/inference/: kernels.py  sampling.py  svgd.py
src/torch_bp/util/: distances.py  integration.py  misc.py  multi_robot.py  plotting.py  spider.py
