[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_bp"
version = "1.0.0"
authors = [
  { name="Jana Pavlasek", email="jbpavlasek@gmail.com" },
]
description = "Belief propagation in PyTorch."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "argparse",
    "pyyaml",
	  "numpy>=1.26,<3",
]

[project.urls]
"Homepage" = "https://github.com/janapavlasek/stein-bp"
"Bug Tracker" = "https://github.com/janapavlasek/stein-bp/issues"
